--- a/_src/pug/pages/index.pug
+++ b/_src/pug/pages/index.pug
@@ -45,7 +45,7 @@ block content
 
       .consultation__top.cons-top.line-block
         .cons-top__img-wrap
-          +img-retina(`cons-bg`, `jpg`,``,`cons-top__img`, `1920`,`969`,360, 412, 768, 1200, 1440)
+          +img-retina(`cons-bg`, `jpg`,``,`cons-top__img`, `1920`,`969`,360, 412, 1000, 1200, 1440)
 
 
 
@@ -70,8 +70,10 @@ block content
             .cons-top__right
               .cons-top__plus.plus
                 .plus__top
-                  p.plus__price стоимость консультации
-                  p.plus__price-val
+                  p.plus__price стоимость
+                    br
+                    | консультации
+                  p.plus__price-val 3 000 ₽
 
                 .plus__bottom
                   figure.plus__img
@@ -81,7 +83,7 @@ block content
 
 
 
-      .consultation__slider.slider
+      //- .consultation__slider.slider
         .slider__inner
           .slider__left.swiper-container
 
@@ -107,7 +109,7 @@ block content
 
 
 
-      .consultation__bottom.how
+      //- .consultation__bottom.how
         .how__inner
           .how__box
             h3.how__title Как проходит работа
