--- a/_src/sass/blocks/3-benefit.scss
+++ b/_src/sass/blocks/3-benefit.scss
@@ -19,7 +19,8 @@
     }
 
     @include mw($empty) {
-      flex-direction: column
+      flex-direction: column;
+      align-items: center
     }
   }
 
@@ -75,18 +76,19 @@
     }
 
     @include mw($empty) {
-      max-width: none;
-      width: 100%;
+      max-width: 370px;
       margin-top: 125px;
       margin-bottom: 64px;
-      padding-left: 12px;
+      padding-left: 0;
     }
+
 
     @include mw(600px) {
       margin-top: 95px;
       font-size: 37px;
       line-height: 40px;
       margin-bottom: 56px;
+      margin-left: 13px;
     }
 
     @include mw($min-ph) {
@@ -108,6 +110,10 @@
 
     @include mw($dt) {
       max-width: 794px;
+    }
+
+    @include mw($empty) {
+      max-width: 370px;
     }
   }
 
@@ -136,8 +142,12 @@
     &:nth-child(6) {
       padding-bottom: 150px;
 
+      @include mw($ldt) {
+        padding-bottom: 133px;
+      }
+
       @include mw($dt) {
-        padding-bottom: 79px;
+        padding-bottom: 98px;
         padding-top: 42px;
       }
 
@@ -194,7 +204,7 @@
     @include mw(600px) {
       padding-left: 134px;
       padding-left: 39%;
-      padding-top: 35px;
+      padding-top: 28px;
 
       &:nth-child(5) {
         padding-top: 35px;
@@ -202,11 +212,11 @@
       }
 
       &:nth-child(4) {
-        padding-top: 35px;
+        padding-top: 25px;
       }
 
       &:nth-child(6) {
-        padding-top: 58px;
+        padding-top: 54px;
       }
 
 
@@ -352,11 +362,7 @@
   @include mw($tb) {
     padding-left: 0;
     padding-right: 0;
-    // max-width: 563px;
-    // padding-left: 22px;
-    // padding-right: 22px;
-    // margin-right: auto;
-    // margin-left: auto;
+
   }
 }
 
@@ -365,6 +371,8 @@
   &--border {
     position: relative;
 
+
+
     @include mw($dt) {
       max-width: 1063px;
     }
@@ -372,13 +380,13 @@
     @include mw($empty) {
       padding-left: 73px;
       padding-right: 80px;
-      padding-bottom: 57px;
+      padding-bottom: 34px;
     }
 
     @include mw($tb) {
-      max-width: 563px;
-      padding-left: 13%;
-      padding-right: 14%;
+      max-width: 522px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     @include mw(600px) {
@@ -386,7 +394,7 @@
       margin-right: 22px;
       padding-left: 13px;
       padding-right: 10px;
-      padding-bottom: 23px;
+      padding-bottom: 2px;
     }
 
     @include mw(380px) {
