--- a/_src/sass/helpers/_font.scss
+++ b/_src/sass/helpers/_font.scss
@@ -2,3 +2,4 @@
 @include font-load(Montserrat, Light, 300, normal);
 @include font-load(Montserrat, Regular, 400, normal);
 @include font-load(Montserrat, SemiBold, 600, normal);
+@include font-load(MyriadPro, Light, 300, normal);
